--- a/src/main/webapp/css/proyecto.css
+++ b/src/main/webapp/css/proyecto.css
@@ -1,3 +1,8 @@
 .tm-2-col-text-description {
     font-size: 15px;
 }
+
+.divcentro {
+                display: flex;
+                justify-content: center;
+            }
