--- a/src/main/webapp/css/proyecto.css
+++ b/src/main/webapp/css/proyecto.css
@@ -3,6 +3,8 @@
 }
 
 .divcentro {
-                display: flex;
-                justify-content: center;
-            }
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    alignment-adjust: central;
+}
