--- a/src/main/webapp/css/proyecto.css
+++ b/src/main/webapp/css/proyecto.css
@@ -3,8 +3,7 @@
 }
 
 .divcentro {
+    display: flex;
     justify-content: center;
-    align-content: center;
     align-items: center;
-    alignment-adjust: central;
 }
